update: 接近天花板的TS类型体操, 看懂你就能玩转TS了

--- a/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
+++ b/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
@@ -607,7 +607,7 @@ type LastIndexOf<S1 extends string, S2 extends string> = LastIndexOfHelper<
 
 原理：模板字符串类型的模式匹配是从左往右的，而 `LastIndexOf` 是从右往左的，所以在匹配时，仍然基于从左往右匹配，但是每次匹配后，替换掉匹配过的子串为空串
 
-然后把删掉的部分的长度累计起来，就是最后模拟从右往左匹配到的索引值
+然后把删掉的部分的长度累计起来，结果就是模拟从右往左匹配到的索引值
 
 注：`Replace` 见下文
 
@@ -647,7 +647,7 @@ type ReplaceAll<
   : S
 ```
 
-原理：基于 `Replace`，递归进行替换，替换掉所有 `MatchStr`
+原理：基于 `Replace`，递归进行替换，替换掉所有 `MatchStr`，终止条件是 `S` 是否包含 `MatchStr`
 
 #### Repeat - 重复 Times 次数的字符串
 
@@ -713,6 +713,11 @@ type PadHelper<
       >
   : S
 
+/**
+ * 当字符串不满足给定的长度时，在字符串前面填充使其满足长度
+ * @example
+ * type Result = PadStart<'0123', 10> // '      0123'
+ */
 type PadStart<
   S extends string,
   N extends number = 0,
@@ -720,11 +725,16 @@ type PadStart<
 > = PadHelper<S, N, FillS>
 ```
 
-原理：
+原理：比较指定的长度和当前字符串类型的长度相等，如果满足长度，直接返回 `S`，每次递归时，给 `S` 左侧添加指定的字符，直到 `S` 的长度满足指定的长度时，终止递归
 
 #### PadEnd - 在字符串后面填充
 
 ```ts
+/**
+ * 当字符串不满足给定的长度时，在字符串后面填充使其满足长度
+ * @example
+ * type Result = PadStart<'0123', 10> // '0123      '
+ */
 type PadEnd<
   S extends string,
   N extends number = 0,
@@ -732,11 +742,16 @@ type PadEnd<
 > = PadHelper<S, N, FillS, false>
 ```
 
+原理：比较给定的长度和当前字符串类型的长度相等，如果满足长度，直接返回 `S`，每次递归时，给 `S` 右侧添加指定的字符，直到 `S` 的长度满足给定的长度时，终止递归
+
 #### TrimLeft - 去掉字符串前面的空格
 
 ```ts
 /**
+ * 去掉字符串类型左侧的空格
  * @see https://juejin.cn/post/7045536402112512007#heading-5
+ * @example
+ * type Result = PadStart<'   0123'> // '0123'
  */
 type TrimLeft<S extends string> = S extends `${
   | " "
@@ -746,9 +761,16 @@ type TrimLeft<S extends string> = S extends `${
   : S
 ```
 
+原理：每次匹配 ``${一个空格}${剩余字符}`` 然后让 `剩余字符` 继续匹配，直到不符合 ``${一个空格}${剩余字符}`` 的规则时，终止递归，返回 `S`
+
 #### TrimRight - 去掉字符串后面的空格
 
 ```ts
+/**
+ * 去掉字符串类型右侧的空格
+ * @example
+ * type Result = PadStart<'0123   '> // '0123'
+ */
 type TrimRight<S extends string> = S extends `${infer LeftRest}${
   | " "
   | "\t"
@@ -757,23 +779,46 @@ type TrimRight<S extends string> = S extends `${infer LeftRest}${
   : S
 ```
 
+原理：每次匹配 ``${剩余字符}${一个空格}`` 然后让 `剩余字符` 继续匹配，直到不符合 ``${剩余字符}${一个空格}`` 的规则时，终止递归，返回 `S`
+
 #### Trim - 去掉字符串的空格
 
 ```ts
+/**
+ * 去掉字符串类型两侧的空格
+ * @example
+ * type Result = PadStart<'   0123   '> // '0123'
+ */
 type Trim<S extends string> = TrimLeft<TrimRight<S>>
 ```
+
+原理：先用 `TrimRight` 去掉右侧的空格，再把前者结果交给 `TrimLeft` 去掉左侧的空格
 
 #### ToUpperCase - 字符串转大写
 
 ```ts
+/**
+ * 字符串转大写
+ * @example
+ * type Result = ToUpperCase<'abc'> // 'ABC'
+ */
 type ToUpperCase<S extends string> = Uppercase<S>
 ```
+
+原理：TS 内置
 
 #### ToLowerCase - 字符串转小写
 
 ```ts
+/**
+ * 字符串转小写
+ * @example
+ * type Result = ToUpperCase<'ABC'> // 'abc'
+ */
 type ToLowerCase<S extends string> = Lowercase<S>
 ```
+
+原理：TS 内置
 
 #### SubString - 截取 start（包括）到 end（不包括）之间的字符串
 
@@ -811,11 +856,17 @@ type SubString<
 > = SubStringHelper<S, Start, End>
 ```
 
+原理：遍历字符串类型的每一个字符，如果当前索引大于等于 `Start`，并且小于等于 `End`，就把当前字符 push 到元组中，最后用 `array.Join`，将元组转为字符串类型
+
+注：`array.Join` 见下文
+
 #### SubStr - 在字符串中抽取从开始下标到结束下标的字符
 
 ```ts
 /**
  * 在字符串中抽取从 开始 下标开始的指定数目的字符
+ * @example
+ * type Result = SubStr<'123', 1, 2> // '23'
  */
 type SubStr<
   S extends string,
@@ -824,7 +875,523 @@ type SubStr<
 > = SubStringHelper<S, Start, number.IntAddSingle<Start, Len>>
 ```
 
+原理：`SubString` 需要起始和结束，有 `Start` 和 `Len` 就可以先算出 `End`，就可以使用 `SubString` 了
+
 ### 封装 array 工具类型
+
+#### GetTuple - 构造指定长度的元组
+
+```ts
+/**
+ * 构造长度一定（Length）的元组
+ * @example
+ * type Result = GetTuple<3> // [unknown, unknown, unknown]
+ */
+type GetTuple<Length extends number = 0> = GetTupleHelper<Length>
+
+type GetTupleHelper<
+  Length extends number = 0,
+  R extends unknown[] = []
+> = R["length"] extends Length ? R : GetTupleHelper<Length, [...R, unknown]>
+```
+
+#### ArraySet - 更改元组中指定索引位的类型
+
+```ts
+type SetHelper<
+  T extends unknown[],
+  Index extends number,
+  Value,
+  Offset extends number = 0,
+  Cache extends unknown[] = []
+> = Offset extends T["length"]
+  ? Cache
+  : SetHelper<
+      T,
+      Index,
+      Value,
+      number.IntAddSingle<Offset, 1>,
+      Push<Cache, Offset extends Index ? Value : T[Offset]>
+    >
+
+/**
+ * 更改元组中指定索引位的类型
+ * @example
+ * type Result = ArraySet<[1, 2, 3], 2, 4> // [1, 2, 4]
+ */
+type ArraySet<T extends unknown[], Index extends number, Value> = SetHelper<
+  T,
+  Index,
+  Value
+>
+```
+
+原理：遍历元组类型，如果 `Offset` 等于给定的索引，则该索引对应的类型替换为给定的类型，否则用原类型
+
+
+#### TupleToUnion - 从元（数）组类型构造联合类型
+
+```ts
+/**
+ * 从元（数）组类型构造联合类型
+ * @example
+ * type Result = TupleToUnion<[1, 2, 3]> // 1 | 2 | 3
+ */
+type TupleToUnion<T extends unknown[]> = T[number]
+```
+
+原理：元组（数组）类型的索引访问会得到联合类型
+
+#### Pop - 去除元组类型的最后一位
+
+```ts
+/**
+ * 去掉元组的最后一位
+ * @see https://juejin.cn/post/7045536402112512007#heading-2
+ * @example
+ * type Result = Pop<[1, 2, 3]> // [1, 2]
+ */
+type Pop<T extends unknown[]> = T extends [...infer LeftRest, infer Last]
+  ? LeftRest
+  : never
+```
+
+原理：基于元组的模式匹配，提取最后一项，返回剩余项
+
+#### Shift - 去除元组类型的第一位
+
+```ts
+/**
+ * 去掉数组的第一位
+ * @example
+ * type Result = Shift<[1, 2, 3]> // [2, 3]
+ */
+type Shift<T extends unknown[]> = T extends [infer First, ...infer RightRest]
+  ? RightRest
+  : never
+```
+
+原理：与 `Pop` 同理
+
+#### UnShift - 在元组前面插入一位
+
+```ts
+/**
+ * 在元组前面插入一位
+ * @example
+ * type Result = UnShift<[1, 2, 3], 0> // [0, 1, 2, 3]
+ */
+type UnShift<T extends unknown[], Item> = [Item, ...T]
+```
+
+原理：`[]` 中直接写类型可以构建新元组类型，其中写 `...Tuple`，与 js 中的扩展运算符效果一致
+
+
+#### Push - 在元组后面插入一位
+
+```ts
+/**
+ * 在元组最后插入一位
+ * @example
+ * type Result = Push<[1, 2, 3], 4> // [1, 2, 3， 4]
+ */
+type Push<T extends unknown[], Item> = [...T, Item]
+```
+
+原理：同 `UnShift`
+
+
+#### Concat - 合并两个元组类型
+
+```ts
+/**
+ * 合并两个元组类型
+ * @example
+ * type Result = Concat<[1, 2, 3], [4]> // [1, 2, 3, 4]
+ */
+type Concat<T extends unknown[], R extends unknown[]> = [...T, ...R]
+```
+
+原理：见 `UnShift`
+
+#### Join - 将元组类型拼接成字符串类型
+
+```ts
+/**
+ * 将元组类型拼接成字符串类型
+ * @example
+ * type Result = Join<[1, 2, 3]> // "1,2,3"
+ */
+type Join<
+  T extends common.CanStringified[],
+  SplitStr extends common.CanStringified = ""
+> = T["length"] extends 0
+  ? ""
+  : T extends [infer Left, ...infer RightRest]
+  ? Left extends common.CanStringified
+    ? RightRest extends common.CanStringified[]
+      ? `${Left}${T["length"] extends 1 ? "" : SplitStr}${Join<
+          RightRest,
+          SplitStr
+        >}`
+      : never
+    : never
+  : never
+```
+
+原理：每次递归时提取元组第一个类型，然后将此类型放到模板字符串类型的第一个位置 ``${第一个位置}${第二个位置}${第三个位置}``
+
+第二个位置即转为字符串用来分隔的子串，如果元组的长度为 0，则为空串
+
+第三个位置则是剩下部分的逻辑，即重复最开始的逻辑
+
+#### Every - 校验元组中每个类型是否都符合条件
+
+```ts
+type EveryHelper<
+  T extends unknown[],
+  Check,
+  Offset extends number = 0,
+  CacheBool extends boolean = true
+> = T["length"] extends Offset
+  ? CacheBool
+  : EveryHelper<
+      T,
+      Check,
+      number.IntAddSingle<Offset, 1>,
+      common.And<common.CheckLeftIsExtendsRight<T[Offset], Check>, CacheBool>
+    >
+
+/**
+ * 校验元组中每个类型是否都符合条件
+ * @example
+ * type Result = Every<[1, 2, 3], number> // true
+ */
+type Every<T extends unknown[], Check> = T["length"] extends 0
+  ? false
+  : EveryHelper<T, Check>
+```
+
+原理：初始类型 `CacheBool` 为 true，依次将元组中每个类型与初始类型进行 `与` 操作，如果元组长度为 0，则返回 `false`
+
+注：`common.And、common.CheckLeftIsExtendsRight` 见下文
+
+#### Some - 校验元组中是否有类型符合条件
+
+```ts
+type SomeHelper<
+  T extends unknown[],
+  Check,
+  Offset extends number = 0,
+  CacheBool extends boolean = false
+> = T["length"] extends Offset
+  ? CacheBool
+  : SomeHelper<
+      T,
+      Check,
+      number.IntAddSingle<Offset, 1>,
+      common.Or<common.CheckLeftIsExtendsRight<T[Offset], Check>, CacheBool>
+    >
+
+/**
+ * 校验元组中是否有类型符合条件
+ * @example
+ * type Result = Every<['1', '2', 3], number> // true
+ */
+type Some<T extends unknown[], Check> = SomeHelper<T, Check>
+```
+
+原理：初始类型 `CacheBool` 为 false，依次将元组中每个类型与初始类型进行 `或` 操作，如果元组长度为 0，则返回 `false`
+
+注：`common.Or、common.CheckLeftIsExtendsRight` 见下文
+
+#### Fill - 以指定类型填充元组类型
+
+```ts
+type FillHelper<
+  T extends unknown[],
+  F,
+  Offset extends number = 0
+> = T["length"] extends 0
+  ? F[]
+  : Offset extends T["length"]
+  ? common.IsEqual<T, F[]> extends true /** any[] -> T[] */
+    ? T
+    : F[]
+  : FillHelper<array.Push<array.Shift<T>, F>, F, number.IntAddSingle<Offset, 1>>
+
+
+/**
+ * 以指定类型填充元组类型
+ * @example
+ * type Result = Fill<['1', '2', 3, any], 1> // [1, 1, 1, 1]
+ */
+type Fill<T extends unknown[], F = undefined> = FillHelper<T, F>
+```
+
+原理：如果原元组长度为 0，则直接返回由新类型构成的元组 `F[]`
+
+如果是数组类型如：`any[]`、`never[]`、`number[]`，也应该直接替换成 `T[]`
+
+否则，每次在原元组中删除第一个，然后在最前面添加一个新类型，直到循环条件与 `T` 的长度一致时，终止递归
+
+注：`commom.IsEqual` 见下文
+
+#### Filter - 过滤出元组类型中符合条件的类型
+
+```ts
+type FilterHelper<
+  T extends unknown[],
+  C,
+  Strict extends boolean,
+  Offset extends number = 0,
+  Cache extends unknown[] = []
+> = Offset extends T["length"]
+  ? Cache
+  : FilterHelper<
+      T,
+      C,
+      Strict,
+      number.IntAddSingle<Offset, 1>,
+      common.And<Strict, common.IsEqual<T[Offset], C>> extends true
+        ? array.Push<Cache, T[Offset]>
+        : common.And<
+            common.Not<Strict>,
+            common.CheckLeftIsExtendsRight<T[Offset], C>
+          > extends true
+        ? array.Push<Cache, T[Offset]>
+        : Cache
+    >
+
+/**
+ * 过滤出元组类型中符合条件的类型
+ * @example
+ * type Result = Filter<['1', '2', 3, any, 1], 1, true> // [1]
+ */
+type Filter<
+  T extends unknown[],
+  C,
+  Strict extends boolean = false
+> = FilterHelper<T, C, Strict>
+```
+
+原理：严格模式，即 `any` 只能为 `any`，而不能为 `1`、`unknown` 这样的其他类型
+
+如果是严格模式就用 `common.IsEqual` 进行约束校验，否则用 `common.CheckLeftIsExtendsRight` 进行约束校验
+
+每次递归时，如果满足上述条件，则放入新的元组类型中
+
+如果循环条件 `Offset` 等于 `T` 的长度是，终止循环，返回新的元组类型 `Cache`
+
+注：`common.Not` 见下文
+
+#### MapWidthIndex - 将元组类型映射为带索引的元组类型
+
+```ts
+interface IndexMappedItem<Item, Index extends number, Tuple extends unknown[]> {
+  item: Item
+  index: Index
+  tuple: Tuple
+}
+
+type MapWidthIndexHelper<
+  T extends unknown[],
+  Offset extends number = 0,
+  Cache extends unknown[] = []
+> = T["length"] extends Offset
+  ? Cache
+  : MapWidthIndexHelper<
+      T,
+      number.IntAddSingle<Offset, 1>,
+      Push<Cache, IndexMappedItem<T[Offset], Offset, T>>
+    >
+
+/**
+ * 将元组类型映射为带索引的元组类型
+ * @example
+ * type Result = MapWidthIndex<[1, 2]> // [{ item: 1; index: 0;tuple: [1, 2]; }, { item: 2; index: 1;tuple: [1, 2]; }]
+ */
+type MapWidthIndex<T extends unknown[]> = MapWidthIndexHelper<T>
+```
+
+原理：声明一个接口用于构造新的元组类型中的项，然后每次递归都向 `Cache` 中添加一个经过 `IndexMappedItem` 处理后的类型
+
+注：由于 TS 中实现不了回调的效果，因为带泛型参数的工具类型不能直接当做类型传递，必须要先传了泛型参数才能用，所以暂时无法实现 `js` 中 `Array.prototype.map` 的效果
+
+
+#### Find - 找到元组类型中第一个符合条件的类型
+
+```ts
+type FindHelper<
+  T extends unknown[],
+  C,
+  Offset extends number = 0
+> = Offset extends number.IntAddSingle<T["length"], 1>
+  ? null
+  : common.CheckLeftIsExtendsRight<T[Offset], C> extends true
+  ? T[Offset]
+  : FindHelper<T, C, number.IntAddSingle<Offset, 1>>
+/** */
+type Find<T extends unknown[], C> = FindHelper<T, C>
+```
+
+#### Reverse - 反转元组
+
+```ts
+type ReverseHelper<
+  T extends unknown[],
+  Offset extends number = 0,
+  Cache extends unknown[] = []
+> = Cache["length"] extends T["length"]
+  ? Cache
+  : ReverseHelper<T, number.IntAddSingle<Offset, 1>, UnShift<Cache, T[Offset]>>
+/** */
+type Reverse<T extends unknown[]> = ReverseHelper<T>
+```
+
+#### FindLast - 找到元组类型中最后一个符合条件的类型
+
+```ts
+/** */
+type FindLast<T extends unknown[], C> = Find<Reverse<T>, C>
+```
+
+#### FindIndex - 找到元组类型中第一个符合条件的类型的索引
+
+```ts
+type FindIndexHelper<
+  T extends unknown[],
+  C,
+  Strict extends boolean = false,
+  Offset extends number = 0
+> = Offset extends number.IntAddSingle<T["length"], 1>
+  ? -1
+  : common.And<common.IsEqual<T[Offset], C>, Strict> extends true
+  ? Offset
+  : common.And<
+      common.CheckLeftIsExtendsRight<T[Offset], C>,
+      common.Not<Strict>
+    > extends true
+  ? Offset
+  : FindIndexHelper<T, C, Strict, number.IntAddSingle<Offset, 1>>
+
+/** */
+type FindIndex<
+  T extends unknown[],
+  C,
+  Strict extends boolean = false
+> = FindIndexHelper<T, C, Strict>
+```
+
+#### FindLastIndex - 找到元组类型中最后一个符合条件的类型的索引
+
+```ts
+type FindLastIndexHelper<
+  T extends unknown[],
+  C,
+  Item = Find<Reverse<MapWidthIndex<T>>, IndexMappedItem<C, number, T>>
+> = Item extends IndexMappedItem<C, number, T> ? Item["index"] : -1
+
+type FindLastIndex<T extends unknown[], C> = FindLastIndexHelper<T, C>
+```
+
+原理：
+
+#### Flat - 扁平化元组
+
+```ts
+type FlatHelper<
+  T extends unknown[],
+  Offset extends number = 0,
+  Cache extends unknown[] = []
+> = Offset extends T["length"]
+  ? Cache
+  : FlatHelper<
+      T,
+      number.IntAddSingle<Offset, 1>,
+      T[Offset] extends unknown[]
+        ? Concat<Cache, T[Offset]>
+        : Push<Cache, T[Offset]>
+    >
+
+type Flat<T extends unknown[]> = FlatHelper<T>
+```
+
+#### Includes - 元组类型中是否存在一个符合条件的类型
+
+```ts
+type Includes<T extends unknown[], C> = common.CheckLeftIsExtendsRight<
+  C,
+  TupleToUnion<T>
+>
+```
+
+#### Slice - 提取元组类型中指定起始位置到指定结束位置的类型构造新元组类型
+
+```ts
+type SliceHelper<
+  T extends unknown[],
+  Start extends number,
+  End extends number,
+  Offset extends number = 0,
+  Cache extends unknown[] = []
+> = number.IsEqual<Offset, End> extends true
+  ? Cache
+  : SliceHelper<
+      T,
+      Start,
+      End,
+      number.IntAddSingle<Offset, 1>,
+      common.And3<
+        common.Or<number.Compare<Offset, Start>, number.IsEqual<Offset, Start>>,
+        common.Or<number.Compare<End, Offset>, number.IsEqual<Offset, End>>,
+        common.Or<
+          number.Compare<T["length"], Offset>,
+          number.IsEqual<T["length"], End>
+        >
+      > extends true
+        ? array.Push<Cache, T[Offset]>
+        : Cache
+    >
+
+type Slice<
+  T extends unknown[],
+  Start extends number,
+  End extends number
+> = SliceHelper<T, Start, End>
+```
+
+#### Sort - 排序
+
+```ts
+type SortHepler2<
+  T extends number[],
+  Offset extends number = 0,
+  Offset1 extends number = 0,
+  Offset1Added extends number = number.IntAddSingle<Offset1, 1>,
+  Seted1 extends unknown[] = ArraySet<T, Offset1Added, T[Offset1]>,
+  Seted2 extends unknown[] = ArraySet<Seted1, Offset1, T[Offset1Added]>
+> = number.IntAddSingle<
+  number.IntAddSingle<Offset, Offset1>,
+  1
+> extends T["length"]
+  ? SortHepler1<T, number.IntAddSingle<Offset, 1>>
+  : SortHepler2<
+      number.Compare<T[Offset1], T[Offset1Added]> extends true
+        ? Seted2 extends number[]
+          ? Seted2
+          : never
+        : T,
+      number.IntAddSingle<Offset1, 1>
+    >
+
+type SortHepler1<
+  T extends number[],
+  Offset extends number = 0
+> = Offset extends T["length"] ? T : SortHepler2<T, Offset>
+
+type Sort<T extends number[]> = SortHepler1<T>
+```
 
 ### 封装 number 工具类型
 
