update: 接近天花板的TS类型体操, 看懂你就能玩转TS了

--- a/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
+++ b/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
@@ -12,7 +12,11 @@ tags:
 
 本文以 [Typescript 4.5](https://www.typescriptlang.org/docs/handbook/release-notes/typescript-4-5.html) 及以上版本为基础
 
-本文要实现一种类型工具 `type result = Add<"9007199254740991", "9007199254740991">`，能计算出两个数字字符串的和，即 `"18014398509481982"`
+本文要实现一种类型工具 
+
+`type result = Add<"9007199254740991", "9007199254740991">`
+
+能计算出两个数字字符串类型的和，即 `"18014398509481982"`
 
 本文代码见：[https://github.com/kawayiLinLin/typescript-lodash/tree/master](https://github.com/kawayiLinLin/typescript-lodash/tree/master)
 
@@ -678,7 +682,7 @@ type Repeat<S extends string, Times extends number = 1> = RepeatHelper<S, Times>
 
 原理：当重复次数 `Times` 为 `0` 时，直接返回空字符串
 
-在参数中传递循环变量 `Offset` （每次传递时加 1，即 `number.IntAddSingle<Offset, 1>`），当循环变量 `Offset` 和循环次数 `Times` 相等时，结束递归
+在参数中传递循环条件 `Offset` （每次传递时加 1，即 `number.IntAddSingle<Offset, 1>`），当循环条件 `Offset` 和循环次数 `Times` 相等时，结束递归
 
 每次递归中，都在字符串的起始位置插入一个字符串 `S`，即
 
@@ -1235,6 +1239,8 @@ type FindHelper<
 type Find<T extends unknown[], C> = FindHelper<T, C>
 ```
 
+原理：遍历在元组中找，如果找到了匹配的，则返回该类型，否则返回 `null` 类型
+
 #### Reverse - 反转元组
 
 ```ts
@@ -1249,12 +1255,16 @@ type ReverseHelper<
 type Reverse<T extends unknown[]> = ReverseHelper<T>
 ```
 
+原理：遍历老元组类型，每次在新元组类型 `Cache` 的前面插入当前类型
+
 #### FindLast - 找到元组类型中最后一个符合条件的类型
 
 ```ts
 /** */
 type FindLast<T extends unknown[], C> = Find<Reverse<T>, C>
 ```
+
+原理：反转老元组类型，然后通过 `Find` 查找
 
 #### FindIndex - 找到元组类型中第一个符合条件的类型的索引
 
@@ -1283,6 +1293,8 @@ type FindIndex<
 > = FindIndexHelper<T, C, Strict>
 ```
 
+原理：严格模式，参考上文 `Filter`，遍历元组，符合约束校验时，返回当前 `Offset`，否则结束后返回 -1
+
 #### FindLastIndex - 找到元组类型中最后一个符合条件的类型的索引
 
 ```ts
@@ -1295,7 +1307,7 @@ type FindLastIndexHelper<
 type FindLastIndex<T extends unknown[], C> = FindLastIndexHelper<T, C>
 ```
 
-原理：
+原理：通过 `MapWidthIndex` 将索引记录到元组的每个类型中，使用 `Find` 匹配反转后的元组，匹配到时，返回该类型的 `Item['index']` 值即为结果
 
 #### Flat - 扁平化元组
 
@@ -1317,6 +1329,8 @@ type FlatHelper<
 type Flat<T extends unknown[]> = FlatHelper<T>
 ```
 
+原理：遍历元组类型，如果当前类型不满足 `unknown[]` 的约束，则将它 `Push` 进新元组中，否则将它 `Concat` 进去
+
 #### Includes - 元组类型中是否存在一个符合条件的类型
 
 ```ts
@@ -1325,6 +1339,8 @@ type Includes<T extends unknown[], C> = common.CheckLeftIsExtendsRight<
   TupleToUnion<T>
 >
 ```
+
+原理：将元组转为联合类型，如果约束条件 `C` 可以分配给该联合类型，那么就是 `true`
 
 #### Slice - 提取元组类型中指定起始位置到指定结束位置的类型构造新元组类型
 
@@ -1361,6 +1377,8 @@ type Slice<
 > = SliceHelper<T, Start, End>
 ```
 
+原理：和字符串裁剪的类似，遍历老元组，当循环条件 `Offset` 大于等于 `Start` 或 小于等于 `End` 时，将这些类型 `Push` 到新元组中
+
 #### Sort - 排序
 
 ```ts
@@ -1393,15 +1411,524 @@ type SortHepler1<
 type Sort<T extends number[]> = SortHepler1<T>
 ```
 
+原理：最简单的冒泡排序，每次排序时，将大的与小的置换
+
+注：受到嵌套实例深度的限制，只能排两个类型的元组
+
 ### 封装 number 工具类型
+
+#### IsZero - 判断类型为 0
+
+```ts
+/**
+ * number类型是否为0
+ * @example
+ * type Result = IsZero<0> // true 
+ */
+type IsZero<N extends NumberLike> = common.CheckLeftIsExtendsRight<N, 0 | "0">
+```
+
+注：原理见上文，`NumberLike` 见上文
+
+#### IsOverZero - 是否大于 0
+
+```ts
+/**
+ * number类型是否大于0
+ * @example
+ * type Result = IsOverZero<2> // true 
+ */
+type IsOverZero<N extends NumberLike> = IsZero<N> extends true
+  ? false
+  : common.CheckLeftIsExtendsRight<
+      string.Stringify<N> extends `${"-"}${infer Rest}` ? Rest : never,
+      never
+    >
+```
+
+注：原理见上文
+
+#### IsLessZero - 是否小于 0
+
+```ts
+/**
+ * number类型是否小于0
+ * @example
+ * type Result = IsLessZero<-2> // true 
+ */
+type IsLessZero<N extends NumberLike> = common.Not<IsOverZero<N>>
+```
+
+#### IsFloat - 是否为浮点型
+
+```ts
+/**
+ * number类型是否是小数
+ * @example
+ * type Result = IsFloat<1.2> // true 
+ */
+type IsFloat<
+  N extends NumberLike,
+  OnlyCheckPoint extends boolean = true
+> = string.Stringify<N> extends `${infer Left}${"."}${infer Right}`
+  ? OnlyCheckPoint extends true
+    ? true
+    : common.Not<common.CheckLeftIsExtendsRight<string.GetChars<Right>, "0">>
+  : false
+```
+
+原理：转为字符串类型后判断是否小数点
+
+#### IsInt - 是否为整型
+
+```ts
+/**
+ * number类型是否是整数
+ * @example
+ * type Result = IsInt<1> // true 
+ */
+type IsInt<
+  N extends NumberLike,
+  OnlyCheckPoint extends boolean = true
+> = common.Not<IsFloat<N, OnlyCheckPoint>>
+```
+
+原理：`IsFloat` 取反
+
+
+#### IsEqual - 数字类型是否相等
+
+```ts
+/**
+ * 两个number类型是否相等
+ * @example
+ * type Result = IsEqual<1, 1> // true 
+ */
+type IsEqual<
+  L extends NumberLike,
+  R extends NumberLike,
+  Strict extends boolean = true
+> = Strict extends true
+  ? common.CheckLeftIsExtendsRight<L, R>
+  : common.CheckLeftIsExtendsRight<string.Stringify<L>, string.Stringify<R>>
+```
+
+原理：见上文
+
+#### IsNotEqual - 数字类型是否不相等
+
+```ts
+/**
+ * 两个number类型是否不相等
+ * @example
+ * type Result = IsNotEqual<1, 2> // true 
+ */
+type IsNotEqual<
+  L extends NumberLike,
+  R extends NumberLike,
+  Strict extends boolean = true
+> = common.Not<IsEqual<L, R, Strict>>
+```
+
+原理：`IsEqual` 取反
+
+#### IntAddSingle - 整数相加
+
+```ts
+type IntAddSingleHepler<N1 extends number, N2 extends number> = [
+  ...array.GetTuple<N1>,
+  ...array.GetTuple<N2>
+]["length"]
+
+/**
+ * 正整数（和0）加法，A1，A2最大999
+ * @see https://juejin.cn/post/7050893279818317854#heading-8
+ * @example
+ * type Result = IntAddSingle<1, 2> // 3 
+ */
+type IntAddSingle<N1 extends number, N2 extends number> = IntAddSingleHepler<
+  N1,
+  N2
+> extends number
+  ? IntAddSingleHepler<N1, N2>
+  : number
+```
+
+原理：见上文
+
+#### Compare - 比较大小
+
+```ts
+type CompareHelper<
+  N1 extends number,
+  N2 extends number,
+  A1 extends unknown[] = array.GetTuple<N1>,
+  A2 extends unknown[] = array.GetTuple<N2>
+> = IsNotEqual<N1, N2, true> extends true
+  ? common.Or<IsZero<A1["length"]>, IsZero<A2["length"]>> extends true
+    ? IsZero<A1["length"]> extends true
+      ? false
+      : true
+    : CompareHelper<array.Pop<A1>["length"], array.Pop<A2>["length"]>
+  : false
+
+/**
+ * 比较大小
+ * @example
+ * type Result = Compare<1, 2> // false 
+ */
+type Compare<N1 extends number, N2 extends number> = CompareHelper<N1, N2>
+```
+
+原理：见上文
+
+#### IntMinusSingleAbs - 两数相减
+
+```ts
+type IntMinusSingleAbsHelper<
+  N1 extends number,
+  N2 extends number,
+  A1 extends unknown[] = array.GetTuple<N1>,
+  A2 extends unknown[] = array.GetTuple<N2>
+> = IsNotEqual<N1, N2, true> extends true
+  ? common.Or<IsZero<A1["length"]>, IsZero<A2["length"]>> extends true
+    ? IsZero<A1["length"]> extends true
+      ? A2["length"]
+      : A1["length"]
+    : IntMinusSingleAbsHelper<array.Pop<A1>["length"], array.Pop<A2>["length"]>
+  : 0
+
+/**
+ * 两数相减
+ * @example
+ * type Result = IntMinusSingleAbs<2, 1> // 1 
+ */
+type IntMinusSingleAbs<
+  N1 extends number,
+  N2 extends number
+> = IntMinusSingleAbsHelper<N1, N2>
+```
+
+原理：见上文
+
+#### GetHalf - 获取当前数字类型的一半
+
+```ts
+type GetHalfHelper<N extends number, Offset extends number = 0> = IsEqual<
+  IntAddSingle<Offset, Offset>,
+  N
+> extends true
+  ? Offset
+  : IsEqual<IntAddSingle<IntAddSingle<Offset, Offset>, 1>, N> extends true
+  ? IntAddSingle<Offset, 1>
+  : GetHalfHelper<N, IntAddSingle<Offset, 1>>
+
+/**
+ * 获取当前数字类型的一半
+ * @example
+ * type Result = GetHalf<4> // 2 
+ */
+type GetHalf<N extends number> = GetHalfHelper<N>
+```
+
+原理：循环，当 `Offset` + `Offset` 等于 `N` 时，或 `Offset + 1` + `Offset` 等于 `N` 时，`Offset` 即为结果
+
+
+#### ToNumber - 字符串类型转数字类型
+
+```ts
+/** @see https://juejin.cn/post/6999280101556748295#heading-68 */
+type Map = {
+  "0": []
+  "1": [1]
+  "2": [...Map["1"], 1]
+  "3": [...Map["2"], 1]
+  "4": [...Map["3"], 1]
+  "5": [...Map["4"], 1]
+  "6": [...Map["5"], 1]
+  "7": [...Map["6"], 1]
+  "8": [...Map["7"], 1]
+  "9": [...Map["8"], 1]
+}
+
+type Make10Array<T extends any[]> = [
+  ...T,
+  ...T,
+  ...T,
+  ...T,
+  ...T,
+  ...T,
+  ...T,
+  ...T,
+  ...T,
+  ...T
+]
+
+type ToNumberHelper<
+  S extends string,
+  L extends any[] = []
+> = S extends `${infer F}${infer R}`
+  ? ToNumberHelper<
+      R,
+      [...Make10Array<L>, ...(F extends keyof Map ? Map[F] : never)]
+    >
+  : L["length"]
+
+/**
+ * 字符串类型转数字类型
+ * @example
+ * type Result = ToNumber<"100"> // 100
+ */
+type ToNumber<S extends string> = ToNumberHelper<S>
+```
+
+原理：创建一个字符与元组的映射表，我们通过前文的探究已知数字类型可由元组的长度得到，那么就根据每个字符依次构建不同长度的元组即可得到结果
+
+`Make10Array` 是将上一次的结果 * 10
+
+
+见 [https://juejin.cn/post/6999280101556748295#heading-68](https://juejin.cn/post/6999280101556748295#heading-68)
+
+#### Add - 数字相加
+
+见下文
 
 ### 封装 object 工具类型
 
+#### KeysToUnion - 对象类型的所有键转联合类型
+
+```ts
+type KeysToUnion<T> = keyof T
+```
+
+#### Values - 获取对象类型的值构成的联合类型
+
+```ts
+type Values<T> = T[KeysToUnion<T>]
+```
+
+#### KeysToTuple - 获取对象类型键够成的元组类型
+
+```ts
+type KeysToTuple<T> = KeysToUnion<T>[]
+```
+
+#### ExtractValues - 过滤出符合类型 V 的属性
+
+```ts
+type ExtractValues<T, V> = {
+  [Key in keyof T as T[Key] extends V ? Key : never]: T[Key]
+}
+```
+
+#### ExcludeValues - 过滤出不符合类型 V 的属性
+
+```ts
+type ExcludeValues<T, V> = {
+  [Key in keyof T as T[Key] extends V ? never : Key]: T[Key]
+}
+```
+
+#### GetterSetterPrefix - 向对象类型中添加 get 和 set 前缀
+
+```ts
+type GetterSetterPrefix<T> = {
+  [Key in keyof T as Key extends string ? `get${Uppercase<Key>}` : never]: {
+    (): T[Key]
+  }
+} & {
+  [Key in keyof T as Key extends string ? `set${Uppercase<Key>}` : never]: {
+    (val: T[Key]): void
+  }
+} & T
+```
+
+#### Proxify - 将对象类型的每个属性值转为 get 和 set 形式
+
+```ts
+type Proxify<T> = {
+  [P in keyof T]: {
+    get(): T[P]
+    set(v: T[P]): void
+  }
+}
+```
+
+#### NullableValue - 将对象类型的每个属性值转为可为空的
+
+```ts
+type NullableValue<T> = {
+  [Key in keyof T]?: common.Nullable<T[Key]>
+}
+```
+
+
+#### Include - 提取出符合类型 U 的键名构造新的对象类型
+
+```ts
+type Include<T extends object, U extends keyof any> = {
+  [Key in keyof T as Key extends U ? Key : never]: T[Key]
+}
+```
+
+#### ChangeRecordType - 将对象类型的属性值填充为类型 T
+
+```ts
+type ChangeRecordType<K, T = undefined> = {
+  [P in keyof K]?: T
+}
+```
+
+#### Mutable - 变为可写类型
+
+```ts
+type Mutable<T> = {
+  -readonly [P in keyof T]: T[P]
+}
+```
+
+#### ReadonlyPartial - 变为只读且可选的
+
+```ts
+type ReadonlyPartial<T> = {
+  readonly [P in keyof T]?: T[P]
+}
+```
+
+#### DeepPartial - 将对象类型的所有属性转为可选
+
+```ts
+type DeepPartial<T> = {
+  [Key in keyof T]?: T[Key] extends object ? DeepPartial<T[Key]> : T[Key]
+}
+```
+
+#### ChainedAccessUnion - 查找对象类型的所有路径
+
+```ts
+type ChainedAccessUnion<T extends object> = ChainedAccessUnionHelper<T>
+
+type ChainedAccessUnionHelper<
+  T,
+  A = {
+    [Key in keyof T]: T[Key] extends string ? never : T[Key]
+  },
+  B = {
+    [Key in keyof A]: A[Key] extends never
+      ? never
+      : A[Key] extends object
+      ?
+          | `${Extract<Key, string>}.${Extract<keyof A[Key], string>}`
+          | (ChainedAccessUnionHelper<A[Key]> extends infer U
+              ? `${Extract<Key, string>}.${Extract<U, string>}`
+              : never)
+      : never
+  }
+> = T extends object
+  ? Exclude<keyof A | Exclude<Values<B>, never>, never>
+  : never
+```
+
 ### 封装 common 工具类型
+
+#### Not - 非
+
+```ts
+type Not<C extends boolean> = C extends true ? false : true
+```
+
+#### And - 与
+
+```ts
+type And<C1 extends boolean, C2 extends boolean> = C1 extends true
+  ? C2 extends true
+    ? true
+    : false
+  : false
+```
+
+#### Or - 或
+
+```ts
+type Or<C1 extends boolean, C2 extends boolean> = C1 extends true
+  ? true
+  : C2 extends true
+  ? true
+  : false
+```
+
+#### CheckLeftIsExtendsRight - 约束校验
+
+```ts
+type CheckLeftIsExtendsRight<T extends any, R extends any> = T extends R
+  ? true
+  : false
+```
+
+#### IsEqual - 类型严格相等
+
+```ts
+/**
+ * https://github.com/microsoft/TypeScript/issues/27024#issuecomment-510924206
+ */
+type IsEqual<A, B> = (<T>() => T extends A ? 1 : 2) extends <
+  T1
+>() => T1 extends B ? 1 : 2
+  ? true
+  : false
+```
+
+#### IsAny - 类型是否为 any
+
+```ts
+type IsAny<T> = 0 extends (1 & T) ? true : false
+```
+
+#### Diff - 差异
+
+```ts
+type Diff<T, C> = Exclude<T, C> | Exclude<C, T>
+```
+
+#### SumAggregate - 并集
+
+```ts
+type SumAggregate<T, U> = T | U
+```
+
+#### Nullable - 可为空
+
+```ts
+type Nullable<T> = T | null | undefined
+```
+
 
 ### 封装 function 工具类型
 
+#### Noop - 普通函数类型
+
+```ts
+type Noop = (...args: any) => any
+```
+
+
+#### GetAsyncFunctionReturnType - 获取异步函数返回值
+
+```ts
+type GetAsyncFunctionReturnType<F extends Noop> = Awaited<ReturnType<F>>
+```
+
+#### GetFunctionLength - 获取参数长度
+
+```ts
+type GetFunctionLength<F extends Noop> = F extends (...args: infer P) => any
+  ? P["length"]
+  : never
+```
+
 ## 实现一个加法器！
+
+
 
 最终代码
 
