update: 接近天花板的TS类型体操, 看懂你就能玩转TS了

--- a/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
+++ b/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
@@ -5,7 +5,7 @@ category:
   - 技术
   - 分享
 tags:
-  - Typescript
+  - TypeScript
 ---
 
 为了实现一个 ts 类型系统的加法器，我模仿 js 写了一个 ts 工具类型库
@@ -1928,9 +1928,233 @@ type GetFunctionLength<F extends Noop> = F extends (...args: infer P) => any
 
 ## 实现一个加法器！
 
+### 分析
+
+让我们回忆一下，在小学三年级的数学计算中，10进制的小数相加要怎么做？
+
+如 `1.8 + 1.52`
+
+是不是要先把小数点对齐
+
+```txt
+  1.8
++ 1.52
+——————
+  2.32
+```
+
+然后从右往左依次计算，如果当前位的结果大于等于 10，则需要往左边进一位
+
+那么 ts 要如何知道 1 + 1 = 2，1 + 2 = 3 呢？
+
+我们可以定义一个映射表，二维元组，用索引访问的方式得到一位整数加法的结果和它的进位情况
+
+### 实现
+
+#### 什么是一个形如数字的字符串类型
+
+如 `"0.1"`、`"1"` 即是，用 ts 表示即 ``${number}``
+
+但是这样的数字也是符合这个条件的：`"000.1"`
+
+如果想限制这样的数，用正则表达式很好处理，如何在 ts 类型系统中限制呢？
+
+我们可以定义除了小数点前面有多个零的情况的类型
+
+```ts
+// 每位数
+type Numbers = 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
+
+// 以零开头 和 不以零开头
+type AdvancedNumericCharacters =
+  | `${0}.${number}`
+  | `${Exclude<Numbers, 0>}${number | ""}.${number}`
+```
+
+#### 定义加法表
+
+我们如果是 1 + 1，且加法表为 `AddMap`，我们想这样使用 `AddMap[1][1]`，得到相加的结果和需要进位的结果
+
+即：
+
+```ts
+type AddMap = [
+    [/* 0 + 0 */ { result: 0, add: 0 }, /* 0 + 1 */ {/* ... */} /* ... */]
+    // ...
+]
+```
 
 
-最终代码
+#### 数据处理
+
+小学三年级数学中的加法，要从右往左算，要以小数点对齐
+
+但是在上文中我们实现的字符串或元组处理工具中，从右往左的都很麻烦，所以从左往右更简单，且元组操作要比字符串操作更方便，那么在实际的加法运算中
+
+我们真实处理的数据应该是一个被反转的元组
+
+1. 按小数点对齐
+
+即按小数点分割，然后用 PadStart 和 PadEnd 补 0
+
+```ts
+// type Result = SplitByPoint<"1.02"> // ["1", "02"]
+// 如果没有小数点，则小数位补 0 
+type SplitByPoint<S extends AdvancedNumericCharacters> = string.Includes<
+  S,
+  "."
+> extends true
+  ? string.Split<S, ".">
+  : [S, "0"]
+
+// type Result = AddHelperSplitToArr<"1.02", "0.123"> // [["1", "02"], ["10", "123"]]
+// 这里需要一起分割两个数字嘛
+type AddHelperSplitToArr<
+  S1 extends AdvancedNumericCharacters,
+  S2 extends AdvancedNumericCharacters,
+  Result = [SplitByPoint<S1>, SplitByPoint<S2>]
+> = Result extends [[`${number}`, `${number}`], [`${number}`, `${number}`]]
+  ? Result
+  : never
+```
+
+```ts
+// type Result = AddFillZeroHelper<[["1", "02"], ["10", "123"]]> // [["01", "020"], ["10", "123"]]
+// 对上面的结果用 PadStart 和 PadEnd 补 0
+type AddFillZeroHelper<
+  Data extends [[`${number}`, `${number}`], [`${number}`, `${number}`]],
+  Result = [
+    [
+      string.PadStart<Data[0][0], string.GetStringLength<Data[1][0]>, "0">,
+      string.PadEnd<Data[0][1], string.GetStringLength<Data[1][1]>, "0">
+    ],
+    [
+      string.PadStart<Data[1][0], string.GetStringLength<Data[0][0]>, "0">,
+      string.PadEnd<Data[1][1], string.GetStringLength<Data[0][1]>, "0">
+    ]
+  ]
+> = Result extends [[`${number}`, `${number}`], [`${number}`, `${number}`]]
+  ? Result
+  : never
+```
+
+2. 转元组后反转方便从左往右计算
+
+```ts
+// type Result = AddFillZeroHelper<[["1", "02"], ["10", "123"]]> 
+// [[["1", "0"], ["0", "2", "0"]], [["0", "1"], ["3", "2", "1"]]]
+type AddReverseData<
+  Data extends [[`${number}`, `${number}`], [`${number}`, `${number}`]],
+  Result = [
+    [
+      array.Reverse<string.Split<Data[0][0]>>,
+      array.Reverse<string.Split<Data[0][1]>>
+    ],
+    [
+      array.Reverse<string.Split<Data[1][0]>>,
+      array.Reverse<string.Split<Data[1][1]>>
+    ]
+  ]
+> = Result extends [
+  [`${Numbers}`[], `${Numbers}`[]],
+  [`${Numbers}`[], `${Numbers}`[]]
+]
+  ? Result
+  : never
+```
+
+
+#### 开始计算
+
+单独计算小数位或整数位，减少复杂度，如果有进位，就在元组的最前面添加 `"10"`
+
+```ts
+type StepAdderHelper<
+  DataLeft extends `${Numbers}`[], // 整数部分
+  DataRight extends `${Numbers}`[], // 小数部分
+  Curry extends `${Numbers}` = `${0}`, // 当前是否有进位
+  Offset extends number = 0, // 循环的偏移量
+  ResultCache extends `${number}`[] = [], // 用于缓存结果
+  NextOffset extends number = number.IntAddSingle<Offset, 1>, // 偏移量加1
+  Current extends AddMap[Numbers][Numbers] = AddMap[DataLeft[Offset]][DataRight[Offset]], // 当前的结果
+  CurrentWidthPreCurry extends `${Numbers}` = AddMap[Current["result"]][Curry]["result"] // 当前的实际结果（加上进位）
+> = DataLeft["length"] extends DataRight["length"]
+  ? `${Offset}` extends `${DataLeft["length"]}`
+    ? ResultCache
+    : StepAdderHelper<
+        DataLeft,
+        DataRight,
+        Current["add"],
+        NextOffset,
+        common.And<
+          number.IsEqual<Current["add"], "1">,
+          number.IsEqual<`${NextOffset}`, `${DataLeft["length"]}`>
+        > extends true
+          ? array.Push<["10", ...ResultCache], CurrentWidthPreCurry>
+          : array.Push<ResultCache, CurrentWidthPreCurry>
+      >
+  : never
+```
+
+#### 拼接结果
+
+```ts
+type NumbersWidthCurry = Numbers | 10
+
+type MergeResultHelper<
+  Data extends [
+    [`${Numbers}`[], `${Numbers}`[]],
+    [`${Numbers}`[], `${Numbers}`[]]
+  ], // 处理后的的数据
+  LeftInt extends `${Numbers}`[] = Data[0][0], // 加数的整数部分
+  LeftFloat extends `${Numbers}`[] = Data[0][1], // 加数的小数部分
+  RightInt extends `${Numbers}`[] = Data[1][0], // 被加数的整数部分
+  RightFloat extends `${Numbers}`[] = Data[1][1], // 被加数的小数部分
+  FloatAdded extends `${NumbersWidthCurry}`[] = StepAdderHelper<
+    LeftFloat,
+    RightFloat
+  >, // 小数部分加法，附带进位的反序元组的结果
+  FloatHasCurry extends boolean = FloatAdded[0] extends "10" ? true : false, // 小数是否有进位
+  DeleteCurryFloatResult extends unknown[] = FloatHasCurry extends true
+    ? array.Shift<FloatAdded>
+    : FloatAdded, // 小数部分删除进位后的可以直接用的反序元组结果
+  IntAdded extends `${NumbersWidthCurry}`[] = StepAdderHelper<
+    LeftInt,
+    RightInt,
+    FloatHasCurry extends true ? `1` : "0"
+  >, // 整数部分加法，初始会附带上小数部分的进位，结果会带上自己的进位
+  IntHasCurry extends boolean = IntAdded[0] extends "10" ? true : false, // 整数部分是否还有进位
+  DeleteCurryIntResult extends unknown[] = IntHasCurry extends true
+    ? array.Shift<IntAdded>
+    : IntAdded, // 整数部分删除进位后的可以直接用的反序元组结果
+  ResultReversed = array.Reverse<
+    LeftFloat["length"] extends 0
+      ? DeleteCurryIntResult
+      : array.Concat<
+          [...DeleteCurryFloatResult, "."],
+          [...DeleteCurryIntResult]
+        >
+  >, // 将整数小数（小数点）加入结果，并将反序的元组还原
+  FloatResult = array.Join<
+    ResultReversed extends string[]
+      ? IntHasCurry extends true
+        ? ["1", ...ResultReversed]
+        : ResultReversed
+      : never,
+    ""
+  > // 转字符串，并处理整数的进位
+> = FloatResult
+
+// 最终结果
+type Add<
+  S1 extends AdvancedNumericCharacters,
+  S2 extends AdvancedNumericCharacters
+> = MergeResultHelper<
+  AddReverseData<AddFillZeroHelper<AddHelperSplitToArr<S1, S2>>>
+>
+```
+
+### 最终代码
 
 ```ts
 type Numbers = 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
@@ -1938,7 +2162,6 @@ type Numbers = 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
 type AdvancedNumericCharacters =
   | `${0}.${number}`
   | `${Exclude<Numbers, 0>}${number | ""}.${number}`
-  | `${number}`
 
 type AddMap = [
   [
