--- a/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
+++ b/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
@@ -1441,8 +1441,8 @@ type IsZero<N extends NumberLike> = common.CheckLeftIsExtendsRight<N, 0 | "0">
 type IsOverZero<N extends NumberLike> = IsZero<N> extends true
   ? false
   : common.CheckLeftIsExtendsRight<
-      string.Stringify<N> extends `${"-"}${infer Rest}` ? Rest : never,
-      never
+      string.Stringify<N> extends `${"-"}${infer Rest}` ? Rest : false,
+      false
     >
 ```
 
