--- a/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
+++ b/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
@@ -1473,7 +1473,7 @@ type IsFloat<
 > = string.Stringify<N> extends `${infer Left}${"."}${infer Right}`
   ? OnlyCheckPoint extends true
     ? true
-    : common.Not<common.CheckLeftIsExtendsRight<string.GetChars<Right>, "0">>
+    : common.Not<array.Every<string.Split<Right>, "0">>
   : false
 ```
 
