--- a/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
+++ b/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
@@ -1965,10 +1965,13 @@ type GetFunctionLength<F extends Noop> = F extends (...args: infer P) => any
 // 每位数
 type Numbers = 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
 
-// 以零开头 和 不以零开头
+// 开头不能是多个0
 type AdvancedNumericCharacters =
   | `${0}.${number}`
   | `${Exclude<Numbers, 0>}${number | ""}.${number}`
+  | `${Exclude<Numbers, 0>}${Numbers | ""}.${number}`
+  | `${Exclude<Numbers, 0>}${number}`
+  | `${0}`
 ```
 
 #### 定义加法表
