--- a/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
+++ b/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
@@ -1971,7 +1971,7 @@ type AdvancedNumericCharacters =
   | `${Exclude<Numbers, 0>}${number | ""}.${number}`
   | `${Exclude<Numbers, 0>}${Numbers | ""}.${number}`
   | `${Exclude<Numbers, 0>}${number}`
-  | `${0}`
+  | `${Numbers}`
 ```
 
 #### 定义加法表
