fix: 接近天花板的TS类型体操, 看懂你就能玩转TS了

--- a/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
+++ b/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
@@ -402,7 +402,7 @@ type IntMinusSingleAbs<
  * @example
  * type Result = Stringify<0> // "0"
  */
-type Stringify<T extends common.CanStringified> = `${T}`
+type Stringify<T extends CanStringified> = `${T}`
 ```
 
 原理：TS 内置的模板字符串类型
@@ -1027,13 +1027,13 @@ type Concat<T extends unknown[], R extends unknown[]> = [...T, ...R]
  * type Result = Join<[1, 2, 3]> // "1,2,3"
  */
 type Join<
-  T extends common.CanStringified[],
-  SplitStr extends common.CanStringified = ""
+  T extends string.CanStringified[],
+  SplitStr extends string.CanStringified = ""
 > = T["length"] extends 0
   ? ""
   : T extends [infer Left, ...infer RightRest]
-  ? Left extends common.CanStringified
-    ? RightRest extends common.CanStringified[]
+  ? Left extends string.CanStringified
+    ? RightRest extends string.CanStringified[]
       ? `${Left}${T["length"] extends 1 ? "" : SplitStr}${Join<
           RightRest,
           SplitStr
@@ -1733,11 +1733,11 @@ type ExcludeValues<T, V> = {
 
 ```ts
 type GetterSetterPrefix<T> = {
-  [Key in keyof T as Key extends string ? `get${Uppercase<Key>}` : never]: {
+  [Key in keyof T as Key extends string ? `get${Capitalize<Key>}` : never]: {
     (): T[Key]
   }
 } & {
-  [Key in keyof T as Key extends string ? `set${Uppercase<Key>}` : never]: {
+  [Key in keyof T as Key extends string ? `set${Capitalize<Key>}` : never]: {
     (val: T[Key]): void
   }
 } & T
