--- a/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
+++ b/source/_posts/2022_01_接近天花板的TS类型体操-看懂你就能玩转TS了.md
@@ -55,6 +55,8 @@ type ExampleB = B extends `${infer FirstChar}${infer Rest}` ? FirstChar : never 
 
 关于条件类型中 `infer` 的官方文档：[Inferring Within Conditional Types](https://www.typescriptlang.org/docs/handbook/2/conditional-types.html#inferring-within-conditional-types)
 
+<!-- more -->
+
 ### 与或非
 
 基于条件类型可以轻松实现与或非
