update: 好用的前端网站集合

--- a/source/_posts/2022_03_好用的前端网站集合.md
+++ b/source/_posts/2022_03_好用的前端网站集合.md
@@ -12,11 +12,15 @@ tags:
 
 ![](https-::www.sassmeister.com:.jpg)
 
+有时候写一些比较复杂的 SCSS 逻辑时，遇到不生效的问题，可能需要看一下编译出来的 CSS 代码是什么样的，以确认自己写的 SCSS 代码是不是有问题，在线编译可能是一种较为方便的方式
+
 ### JS 代码混淆
 
 [http://www.jsfuck.com/](http://www.jsfuck.com/)
 
 ![](http-::www.jsfuck.com:.jpg)
+
+嗯，优点是你可以用来给你的前端工程师好友搞恶作剧，缺点是只能用一次
 
 <!-- more -->
 
@@ -26,11 +30,17 @@ tags:
 
 ![](https-::www.sass.hk:css2sass:.jpg)
 
+当你重构项目时，可能有用？除了转 SCSS 还能转 Less、Stylus 等，不过转换后的风格可能跟你直接写着不一致
+
 ### TypeScript PlayGround
 
 [https://www.typescriptlang.org/play](https://www.typescriptlang.org/play)
 
 ![](https-::www.typescriptlang.org:play.jpg)
+
+Typescript 官方提供的 TypeScript 在线调试运行工具，如果你遇到了一些 TS 难题，你可以到这个网站编写出你的代码，然后将链接（代码改动会经过编码后会被动态添加到当前 url 上）发给神通广大的网友们，或者你的好友们，请他们帮你解决问题
+
+除了这个，它还能将你写的 ts 代码在线编译成 `js`、`.d.ts` 等，更多的功能你去试一下就知道了
 
 
 ### Vue PlayGround
@@ -39,11 +49,15 @@ tags:
 
 ![](https-::sfc.vuejs.org:.jpg)
 
+轻量级的 vue3 playground，可以实时预览效果，实时查看编译后的 js 代码（包括 ssr 的）和提取出的 css 代码
+
 ### Vue3 Template Explorer
 
 [https://template-explorer.vuejs.org/](https://template-explorer.vuejs.org/)
 
 ![](https-::template-explorer.vuejs.org:.jpg)
+
+vue3 的模板解析工具，学习源码必备
 
 ### Vue2 Template Explorer
 
@@ -151,10 +165,35 @@ tags:
 
 ## 在线书籍/文档
 
-### 阮一峰 《ES6标准入门》
+### 《ES6标准入门》阮一峰
 
 [http://es6.ruanyifeng.com/](http://es6.ruanyifeng.com/)
+
+### 《代码随想录》
+
+[https://programmercarl.com/](https://programmercarl.com/)
+
+### 《现代 JavaScript 教程》
+
+[https://zh.javascript.info/](https://zh.javascript.info/)
 
 ### 《前端进阶之道》
 
 [https://yuchengkai.cn/](https://yuchengkai.cn/)
+
+### 《React 技术揭秘》
+
+[https://react.iamkasong.com/](https://react.iamkasong.com/)
+
+
+### 《Vue 技术揭秘》
+
+[https://ustbhuangyi.github.io/vue-analysis/v2/prepare/](https://ustbhuangyi.github.io/vue-analysis/v2/prepare/)
+
+### 《TypeScript 入门教程》
+
+[https://ts.xcatliu.com/](https://ts.xcatliu.com/)
+
+### 《深入理解TypeScript》
+
+[https://jkchao.github.io/typescript-book-chinese/](https://jkchao.github.io/typescript-book-chinese/)
